<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/tracks_nav_menu_item"
            android:icon="@drawable/ico"
            android:title="@string/tracks" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/share_nav_menu_item"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/send_nav_menu_item"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/logout_nav_menu_item"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
