<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:openDrawer="start">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/app_bar_room" />

        <include layout="@layout/content_room" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/add_track"
            app:srcCompat="@android:drawable/ic_input_add" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/file_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/upload_track"
            android:enabled="false"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_upload_track" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/youtube_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/add_youtube_track"
            android:enabled="false"
            android:visibility="invisible"
            app:backgroundTint="@color/youTube"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_youtube_black" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/spotify_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/add_spotify_track"
            android:enabled="false"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            app:backgroundTint="@color/spotify"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_spotify_black" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/soundcloud_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:contentDescription="@string/add_soundcloud_track"
            android:enabled="false"
            android:scaleType="centerCrop"
            android:visibility="invisible"
            app:backgroundTint="@color/soundCloud"
            app:elevation="0dp"
            app:srcCompat="@drawable/ic_soundcloud_black" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
